{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 11,
  "lineage": "04b6f49f-d420-cfbc-5923-d0f877062028",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:internet-gateway/igw-0c7ffa541fdce9dfa",
            "id": "igw-0c7ffa541fdce9dfa",
            "owner_id": "789343097926",
            "region": "ap-southeast-2",
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "igw-0c7ffa541fdce9dfa",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:route-table/rtb-00db9147bdb6ab26d",
            "id": "rtb-00db9147bdb6ab26d",
            "owner_id": "789343097926",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "rtb-00db9147bdb6ab26d",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:route-table/rtb-04a74a5cd17888f47",
            "id": "rtb-04a74a5cd17888f47",
            "owner_id": "789343097926",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7ffa541fdce9dfa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "rtb-04a74a5cd17888f47",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075a0a89ea12a6d54",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-00db9147bdb6ab26d",
            "subnet_id": "subnet-06f655a67589cd501"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "rtbassoc-075a0a89ea12a6d54",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da52bec117372d7c",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-04a74a5cd17888f47",
            "subnet_id": "subnet-080970cabc79a1375"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "rtbassoc-0da52bec117372d7c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:security-group/sg-0af0a3a910e66cce8",
            "description": "Lambda functions security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af0a3a910e66cce8",
            "ingress": [],
            "name": "workassistance-lambda-sg",
            "name_prefix": "",
            "owner_id": "789343097926",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "sg-0af0a3a910e66cce8",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:security-group/sg-0df3a3b13d75b30c9",
            "description": "RDS PostgreSQL security group",
            "egress": [],
            "id": "sg-0df3a3b13d75b30c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af0a3a910e66cce8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "workassistance-rds-sg",
            "name_prefix": "",
            "owner_id": "789343097926",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "sg-0df3a3b13d75b30c9",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:subnet/subnet-06f655a67589cd501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f655a67589cd501",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "789343097926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "workassistance-private-1"
            },
            "tags_all": {
              "Name": "workassistance-private-1"
            },
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "subnet-06f655a67589cd501",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:subnet/subnet-080970cabc79a1375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080970cabc79a1375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789343097926",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "workassistance-public-1"
            },
            "tags_all": {
              "Name": "workassistance-public-1"
            },
            "vpc_id": "vpc-0982866b371f5cefe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "subnet-080970cabc79a1375",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:789343097926:vpc/vpc-0982866b371f5cefe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0914fa5c63f6e96ca",
            "default_route_table_id": "rtb-0ec125fbeea7d04c8",
            "default_security_group_id": "sg-08b8bfa420b93e99a",
            "dhcp_options_id": "dopt-07c4006cfabb7bb7b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0982866b371f5cefe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec125fbeea7d04c8",
            "owner_id": "789343097926",
            "region": "ap-southeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789343097926",
            "id": "vpc-0982866b371f5cefe",
            "region": "ap-southeast-2"
          }
        }
      ]
    }
  ]
}